@@ -311,3 +311,6 @@
 2016-12-07 Fred Gleason <fredg@paravelsystems.com>
 	* Fixed bugs in 'src/glassplayer/dev_jack.cpp' that broke the
 	build when compiling without JACK support.
+2016-12-07 Fred Gleason <fredg@paravelsystems.com>
+	* Refactored 'configure.ac' to use PKG_CHECK_MODULE() wherever
+	possible.
